--- a/src/styles/Testimonials.scss
+++ b/src/styles/Testimonials.scss
@@ -12,6 +12,10 @@
         flex-direction: column;
         gap: 30px 0
     }
+
+    h2 {
+        font-size: 25pt;
+    }
 }
 
 .testimonials-card-container {
