--- a/src/styles/Testimonials.scss
+++ b/src/styles/Testimonials.scss
@@ -1,20 +1,19 @@
-@import 'App';
-
 #testimonials {
     width: 100%;
-    background-color: $primary-color-2;
-    padding: 15vh 0;
+    background-color: $primary-color-1;
+    padding: 10vh 0 15vh;
 
     > div {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        gap: 30px 0
+        gap: 50px 0
     }
 
     h2 {
         font-size: 25pt;
+        color: $primary-color-2;
     }
 }
 
