--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -5,9 +5,10 @@ header {
     align-items: center;
 
     nav {
-        padding: 15px;
+        padding: 15px 0 15px 15px;
 
         ul {
+            padding: 0;
             list-style-type: none;
             display: flex;
             gap: 0 20px;
