--- a/src/styles/BookingPage.scss
+++ b/src/styles/BookingPage.scss
@@ -46,5 +46,10 @@ form {
     button {
         width: max-content;
         margin: 0 auto;
+
+        &:disabled {
+            opacity: 0.7;
+            cursor: default;
+        }
     }
 }
