--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -36,7 +36,7 @@
 
     img {
         position: absolute;
-        width: 100%;
+        width: 450px;
         border-radius: 8px;
 
         &:first-of-type {
@@ -47,6 +47,63 @@
         &:last-of-type {
             z-index: -1;
             bottom: -150px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1700px) {
+    #about {
+        @include laptop-width();
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    #about {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        gap: 200px 0;
+        margin-bottom: 200px;
+
+        div {
+            &:last-of-type {
+                margin-bottom: 200px;
+            }
+        }
+
+        img {
+            &:first-of-type {
+                right: -100px;
+                top: 100px;
+            }
+
+            &:last-of-type {
+                left: -100px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #about {
+        width: 90%;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 10vh;
+        gap: 20px 0;
+
+        div {
+            width: 100%;
+        }
+
+        img {
+            position: static;
+            display: block;
+            width: 100%;
+
+            &:last-of-type {
+                margin-top: 20px;
+            }
         }
     }
 }
