--- a/src/styles/BookingPage.scss
+++ b/src/styles/BookingPage.scss
@@ -8,7 +8,7 @@
 }
 
 form {
-    width: 20%;
+    width: min(20vw, 350px);
     background-color: rgba($primary-color-1, 0.8);
     color: $secondary-color-3;
     margin: 0 auto;
@@ -51,5 +51,23 @@ form {
             opacity: 0.7;
             cursor: default;
         }
+    }
+}
+
+@media(min-width: 901px) and (max-width: 1024px) {
+    form {
+        width: 30%;
+    }
+}
+
+@media(min-width: 600px) and (max-width: 900px) {
+    form {
+        width: 45%;
+    }
+}
+
+@media(max-width: 320px) {
+    form {
+        width: 65%;
     }
 }
