--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -3,10 +3,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 15px 0 15px 15px;
 
     nav {
-        padding: 15px 0 15px 15px;
-
         ul {
             padding: 0;
             list-style-type: none;
@@ -20,6 +19,55 @@ header {
                 font-weight: bold;
                 cursor: pointer;
             }
+        }
+    }
+}
+
+.menu {
+    display: none;
+}
+
+@media only screen and (max-width: 1700px) {
+    header {
+        @include laptop-width();
+    }
+}
+
+
+@media only screen and (max-width: 1023px) {
+    header {
+        @include mobile-width();
+        padding: 15px 0;
+
+        nav {
+            position: absolute;
+            top: 70px;
+            right: 25px;
+            background-color: white;
+            padding: 20px;
+            visibility: hidden;
+            z-index: 1;
+
+            ul {
+                flex-direction: column;
+                gap: 20px 0;
+            }
+        }
+    }
+
+    .menu {
+        display: block;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    header {
+        nav {
+            right: 5px;
         }
     }
 }
