--- a/src/styles/Testimonials.scss
+++ b/src/styles/Testimonials.scss
@@ -58,6 +58,7 @@
 @media only screen and (max-width: 1023px) and (min-width: 601px) {
     .testimonials-card-container {
         justify-content: center;
+        column-gap: 20px;
         grid-template-columns: repeat(auto-fit, minmax(240px, auto));
     }
 }
